<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_tab_home" />
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/home_tab_friends" />
    <item
        android:id="@+id/nav_marketplace"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/home_tab_marketplace" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/home_tab_notifications" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/home_tab_menu" />
</menu>
